# kctx-fuzzy

./: install.sh  kctx-fuzzy.sh  pyproject.toml
.github/workflows/: release.yml
kctx_fuzzy/: __init__.py  main.py
