[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kctx-fuzzy"
version = "0.1.0"
description = "kubectl context and namespace switcher with built-in fuzzy search — no external fzf required"
authors = [{ name = "thegkops" }]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["kubectl", "kubernetes", "context", "namespace", "fuzzy", "k8s"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/thegkops/kctx-fuzzy"
Repository = "https://github.com/thegkops/kctx-fuzzy"
"Bug Tracker" = "https://github.com/thegkops/kctx-fuzzy/issues"

[project.scripts]
kctx-fuzzy = "kctx_fuzzy.main:main"
kctx       = "kctx_fuzzy.main:main"
kns        = "kctx_fuzzy.main:main"
kns-fuzzy  = "kctx_fuzzy.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kctx_fuzzy*"]
